--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -49,7 +49,7 @@
                                 <div class="row">
                                     <div class="col-sm-5" align="right">
                                         <img alt="User Pic"
-                                             src="https://png.pngitem.com/pimgs/s/294-2947257_interface-icons-user-avatar-profile-user-avatar-png.png"
+                                             src="https://github.com/mdo.png"
                                              id="profile-image1" class="img-circle img-responsive">
                                         <br>
                                     </div>
