Implement Edit Profile logic

--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -127,6 +127,30 @@
                                     <div class="col">
                                         <div class="row">
                                             <div class="col"></div>
+                                            <div class="col title fw-bold">Street Address :</div>
+                                        </div>
+                                    </div>
+                                    <div class="col" align="left">{{ user.street }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">State :</div>
+                                        </div>
+                                    </div>
+                                    <div class="col" align="left">{{ user.state }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
                                             <div class="col title fw-bold">Country :</div>
                                         </div>
                                     </div>
@@ -139,20 +163,7 @@
                                     <div class="col">
                                         <div class="row">
                                             <div class="col"></div>
-                                            <div class="col title fw-bold">Street Address :</div>
-                                        </div>
-                                    </div>
-                                    <div class="col" align="left">{{ user.street }}</div>
-                                    <div class="clearfix"></div>
-                                    <div class="bot-border"></div>
-                                </div>
-
-
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="row">
-                                            <div class="col"></div>
-                                            <div class="col title fw-bold">Membership:</div>
+                                            <div class="col title fw-bold">Membership :</div>
                                         </div>
                                     </div>
                                     <div class="col">
