--- a/home_fix/service/templates/service/service_detail.html
+++ b/home_fix/service/templates/service/service_detail.html
@@ -102,10 +102,10 @@
                                 {% csrf_token %}
                                 <div class="modal-body">
                                     <div class="form-group">
-                                        <label for="id_discription" class="col-form-label">We will review your report in
+                                        <label for="id_description" class="col-form-label">We will review your report in
                                             1-3 days:</label>
-                                        <textarea type="text" class="form-control" id="id_discription"
-                                                  name="discription"></textarea>
+                                        <textarea type="text" class="form-control" id="id_description"
+                                                  name="description"></textarea>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
