--- a/home_fix/forum/templates/forum/discussion.html
+++ b/home_fix/forum/templates/forum/discussion.html
@@ -57,7 +57,7 @@
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Post Your Solution Here</label>
               <input type="hidden" name="post_id" value="{{post.id}}">
-              <textarea class="form-control" id="desc" name="desc" rows="3"></textarea>
+              <textarea class="form-control" id="desc" name="desc" rows="3" maxlength="500"></textarea>
             </div>
           </div>
           {% else %}
