--- a/home_fix/service/templates/service/offer_services.html
+++ b/home_fix/service/templates/service/offer_services.html
@@ -25,7 +25,7 @@
                     </div>
                 </div>
                 <label class="form-label">Description</label>
-                <textarea></textarea>
+                <textarea id="textarea"></textarea>
             </div>
         </div>
     </div>
@@ -37,7 +37,14 @@
 
     <!-- Initialize the editor. -->
     <script>
-        let editor = new FroalaEditor('textarea');
+        let editor = new FroalaEditor('textarea', {
+    theme: 'dark',
+    imageAllowedTypes: ['jpeg', 'jpg', 'png'],
+    imageUploadURL: false,
+    fileUpload: false,
+    events: {
+    }
+  });
     </script>
 
     <!-- Location Searchbar -->
